# quality-pipeline

./: CLAUDE.md  HISTORY.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: quality-pipeline.md
quality_pipeline/: __init__.py  cleanup.py  config.py  detection.py  git_ops.py  monitoring.py  output.py  pipeline.py  process.py
quality_pipeline/rounds/: 01-audit-tests.md  03-concurrency.md  05-error-handling.md  08-dead-code.md
quality_pipeline/templates/: reviewer.md
rounds/: 01-add-tests.md  01-audit-tests.md  02-refactor.md  03-concurrency.md  04-dead-code.md  04-error-handling.md  04-fault-tolerance.md  05-error-handling.md  05-security.md  05-simplify.md  06-security.md  06-type-safety.md  07-type-safety.md  08-dead-code.md  08-dependency-hygiene.md  09-dependency-hygiene.md  10-simplify.md
scripts/: detect-test-command.sh  quality-pipeline.sh  quality_pipeline.py  quality_pipeline_cli.py  run-static-analysis.sh
scripts/quality_pipeline/: __init__.py  __main__.py  cleanup.py  config.py  detection.py  git_ops.py  monitoring.py  output.py  pipeline.py  process.py
tests/: conftest.py  test_cleanup.py  test_config.py  test_detection.py  test_fault_tolerance.py  test_git_ops.py  test_monitoring.py  test_output.py  test_pipeline.py  test_process.py  test_quality_pipeline.py
